--- a/workspace/mail/ui/templates/mail/ui/partials/message_detail.html
+++ b/workspace/mail/ui/templates/mail/ui/partials/message_detail.html
@@ -169,7 +169,7 @@
             <i data-lucide="sparkles" class="w-3.5 h-3.5"></i>
             AI Summary
           </span>
-          <button class="btn btn-ghost btn-xs btn-circle" @click="aiSummary = null" title="Dismiss">
+          <button class="btn btn-ghost btn-xs btn-circle" @click="dismissSummary(messageDetail)" title="Delete summary">
             <i data-lucide="x" class="w-3 h-3"></i>
           </button>
         </div>
