--- a/workspace/mail/ui/templates/mail/ui/index.html
+++ b/workspace/mail/ui/templates/mail/ui/index.html
@@ -4,6 +4,7 @@
 {% block title %}Mail - Workspace{% endblock %}
 
 {% block extra_head %}
+<link rel="stylesheet" href="{% static 'ui/css/ai-thinking.css' %}">
 <link rel="stylesheet" href="{% static 'mail/ui/css/mail.css' %}">
 {% endblock %}
 
