--- a/workspace/mail/ui/templates/mail/ui/partials/compose_dialog.html
+++ b/workspace/mail/ui/templates/mail/ui/partials/compose_dialog.html
@@ -145,7 +145,11 @@
 
       <!-- Body -->
       <div class="flex-1 min-h-0 px-4 py-3">
+        <div x-show="aiComposing" x-cloak class="flex justify-center py-8">
+          {% include "ui/partials/ai_thinking_bubble.html" %}
+        </div>
         <textarea
+          x-show="!aiComposing"
           x-model="compose.body"
           class="w-full h-full text-sm leading-relaxed resize-none bg-transparent focus:outline-none"
           placeholder="Write your message..."
