--- a/workspace/common/templates/ui/partials/dialogs.html
+++ b/workspace/common/templates/ui/partials/dialogs.html
@@ -82,7 +82,7 @@
       <div id="app-dialog-message-icon" class="hidden flex-shrink-0 w-10 h-10 rounded-full flex items-center justify-center"></div>
       <h3 id="app-dialog-message-title" class="font-bold text-lg">Message</h3>
     </div>
-    <p id="app-dialog-message-message" class="py-2 mt-2 break-words">Done.</p>
+    <div id="app-dialog-message-message" class="py-2 mt-2 break-words">Done.</div>
     <div class="modal-action">
       <form method="dialog">
         <button id="app-dialog-message-ok" class="btn btn-sm">OK</button>
