--- a/workspace/files/ui/templates/files/ui/viewers/image_viewer.html
+++ b/workspace/files/ui/templates/files/ui/viewers/image_viewer.html
@@ -19,11 +19,11 @@
   </div>
 
   <!-- Image Container -->
-  <div class="flex-1 overflow-auto flex items-center justify-center p-4">
+  <div class="flex-1 overflow-auto flex items-center justify-center p-4 min-h-0">
     <img
-      src="/api/v1/files/{{ file.uuid }}/content"
+      src="{{ content_url }}"
       alt="{{ file.name }}"
-      class="max-w-full h-auto transition-transform duration-200"
+      class="max-w-full max-h-full object-contain transition-transform duration-200"
       :style="`transform: scale(${zoomLevel}) rotate(${rotation}deg)`"
       x-ref="image"
     />
